# RAG-Performance

./: .env.example  README.md  pyproject.toml
rag_performance/: file_processing_benchmark.py  scalable_ingesetion_benchmark.py
rag_performance/scalable_ingestion_results/: haystack_benchmark_results.csv  langchain_benchmark_results.csv  llamaindex_async_benchmark_results.csv  llamaindex_benchmark_results.csv  r2r_benchmark_results.csv
